Tighten compiler warning and ci